--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ layout: default
       <a href="{{ '/about' | prepend: site.baseurl }}">About</a>
     </li>
     <li>
+      <a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a>
+    </li>
+    <li>
       <a href="http://kipalog.com/users/hqc/mypage" target="_blank">Blog</a>
     </li>
     <li>
