--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
   <a class="avatar" href="">
-    <img width="200" height="200" alt="huynhquancam" src="https://scontent-sin1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/10422366_898967243457131_6573292780961140653_n.jpg?oh=8ce7927604d4b56a15f5433d69eca22a&oe=56E261EF" />
+    <img width="200" height="200" alt="huynhquancam" src="/personal-pic.jpg" />
     <span class="overlay">
       <span class="overlay-center">
         <i class="fa fa-home"></i>
