--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
   </h1>
   <p class="username">@huynhquancam</p>
   <p class="title">
-    Software Engineer / Wonton Maker
+    Software Enbugger / Dumplings Maker
   </p>
   <div class="social-links">
     <a href="https://github.com/huynhquancam" target="blank">
