--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ layout: default
     </span>
   </a>
   <h1 class="name">
-    <span class="first-name">Cam</span>
-    <span class="last-name">Huynh</span>
+    <span class="first-name">Cẩm</span>
+    <span class="last-name">Huỳnh</span>
   </h1>
   <p class="username">@huynhquancam</p>
   <p class="title">
