--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </div>
 </header>
 
-    <div class="page-content">
-      <div class="wrapper">
-        <div class="home">
+    <div class="site site--home">
+      <div class="site__content">
+        <div class="site site--home">
   <a class="avatar" href="">
     <img width="200" height="200" alt="huynhquancam" src="/assets/images/avatar.png" />
     <span class="overlay">
@@ -54,12 +54,18 @@
       <i class="fa fa-facebook"></i>
     </a>
     <a href="https://twitter.com/huynhquancam" target="blank">
-      <span>
-        <i class="fa fa-twitter"></i>
-      </span>
+      <i class="fa fa-twitter"></i>
     </a>
   </div>
+</div>
+
+      </div>
+    </div>
+    <footer>
   <ul class="pages">
+    <li>
+      <a href="/">Home</a>
+    </li>
     <li>
       <a href="/about">About</a>
     </li>
@@ -73,10 +79,7 @@
       <a href="/rbcv">Resume</a>
     </li>
   </ul>
-</div>
-
-      </div>
-    </div>
+</footer>
 
     
       <script>
