--- a/essays/index.html
+++ b/essays/index.html
@@ -27,8 +27,8 @@
   </div>
 </header>
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="site">
+      <div class="site__content">
         <div class="essays">
   <h1>Writings</h1>
   
@@ -183,5 +183,25 @@ which is a CLI to manage all your daily notes like a boss, with vim integration.
 </script>
 
     
+    <footer>
+  <ul class="pages">
+    <li>
+      <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/about">About</a>
+    </li>
+    <li>
+      <a href="/projects">Projects</a>
+    </li>
+    <li>
+      <a href="/essays">Posts</a>
+    </li>
+    <li>
+      <a href="/rbcv">Resume</a>
+    </li>
+  </ul>
+</footer>
+
   </body>
 </html>
