--- a/essays/index.html
+++ b/essays/index.html
@@ -5,15 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>hqc.io | Cẩm Huỳnh | Writings</title>
+  <title>hqc.io | Writings</title>
+  <meta name="og:title" content="hqc.io | Writings">
 
-  <meta name="description" content="Cẩm Huỳnh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field. He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: cam@hqc.me
-">
-  <meta name="author" content="Cẩm Huỳnh <huynhquancam@gmail.com>">
-  <meta name="og:image" content="https://c1.staticflickr.com/5/4059/5135403866_a6a65ec65e_b.jpg">
+  <meta name="og:site_name" content="Cẩm Huỳnh">
+
+  
+  <meta name="description" content="All Cẩm Huỳnh's writtings and what he thinks about world, tech, programming and everything.">
+  
+
+  <meta name="author" content="Cẩm Huỳnh">
+  <meta name="og:url" content="https://hqc.io/essays/">
+  <meta name="og:type" content="article">
+
+  
+  <meta name="og:image" content="https://c3.staticflickr.com/9/8583/28318985330_8f464b5a12_b.jpg">
+  
+
+  <meta name="og:locale" content="en_US">
+
+  <meta name="keywords" content="">
+  <meta name="language" content="en_US">
+  <meta name="url" content="https://hqc.io/essays/">
 
   <link rel="canonical" href="https://hqc.io/essays/">
-  <link rel="alternate" type="application/rss+xml" title="hqc.io | Cẩm Huỳnh" href="https://hqc.io/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="hqc.io" href="https://hqc.io/feed.xml">
 
   <link rel="stylesheet" href="/assets/css/main.css">
 </head>
