--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
   <meta name="og:site_name" content="Cẩm Huỳnh">
 
   
-  <meta name="description" content="Cẩm Huỳnh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field. He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: cam@hqc.me
+  <meta name="description" content="Cẩm Huỳnh is a Chelsea fan and full-stack developer with four-year experience working in web development field. He is currently based in Sai Gon, Vietnam. He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: huynhquancam at gmail dot com
 " >
   
 
@@ -53,13 +53,13 @@
     </header>
     <div class="post__content"><h3 id="hello-forks">Hello forks!</h3>
 
-<p>My name is Cẩm (or Cam if you feel it better to pronounce my name in this way), a Vietnamese developer working in Gothenburg, Sweden.</p>
+<p>My name is Cẩm (or Cam if you find it better to pronounce my name in this way), a Vietnamese developer working in Sai Gon, Vietnam.</p>
 
-<p>I graduated from Ho Chi Minh University of Industry, major in Computer Science.</p>
+<p>I graduated from Industrial University of Ho Chi Minh City, major in Computer Science.</p>
 
 <p>I am a die-hard fan of <a href="http://chelseafc.com">Chelsea FC</a>, and the coach, Jóse Mourinho, has been my lifelong idol.</p>
 
-<p>Right now I am working as a Backend Engineer at <a href="https://footballaddicts.com">Football Addicts</a>, the home of <a href="http://www.footballaddicts.com/apps/">Forza Football</a>.</p>
+<p>Right now I am working at <a href="https://footballaddicts.com">Football Addicts</a>, the home of <a href="http://www.footballaddicts.com/apps/">Forza Football</a>.</p>
 
 <p>Chinese history intrigues me especially the character, Cao Cao, albeit he was considered unrighteous!</p>
 
@@ -68,11 +68,14 @@
 <p>Let end this with a quote which I try to live by,</p>
 
 <blockquote>
-  <p>You must be shapeless, formless, like water. When you pour water in a cup, it becomes the cup. When you pour water in a bottle, it becomes the bottle. When you pour water in a teapot, it becomes the teapot. Water can drip and it can crash. Be water my friend! - Bruce Lee</p>
+  <p>You must be shapeless, formless, like water. When you pour water in a cup, it becomes the cup.
+When you pour water in a bottle, it becomes the bottle.
+When you pour water in a teapot, it becomes the teapot. Water can drip and it can crash. Be water my friend!
+- <strong>Bruce Lee</strong></p>
 </blockquote>
 
 <p>Still feel curious about me? Check my <a href="/rbcv">resume</a>,
-and my <a href="/essays/">blog</a> out, or drop me an <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#032;&#099;&#097;&#109;&#064;&#104;&#113;&#099;&#046;&#109;&#101;">email</a>.</p>
+and my <a href="/essays/">blog</a> out, or drop me an email at huynhquancam at Gmail.</p>
 
 </div>
   </article>
