--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="og:site_name" content="Cẩm Huỳnh">
 
   
-  <meta name="description" content="Cẩm Huỳnh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field. He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: cam@hqc.me
+  <meta name="description" content="Cẩm Huỳnh is a Chelsea fan and full-stack developer with four-year experience working in web development field. He is currently based in Sai Gon, Vietnam. He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: huynhquancam at gmail dot com
 " >
   
 
@@ -64,11 +64,8 @@
     Software Enbugger / Dumplings Maker
   </p>
   <div class="social-links">
-    <a href="https://github.com/huynhquancam" target="blank">
+    <a href="https://github.com/" target="blank">
       <i class="fa fa-github"></i>
-    </a>
-    <a href="https://fb.me/huynhquancam" target="blank">
-      <i class="fa fa-facebook"></i>
     </a>
     <a href="https://twitter.com/huynhquancam" target="blank">
       <i class="fa fa-twitter"></i>
