--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     Software Enbugger / Dumplings Maker
   </p>
   <div class="social-links">
-    <a href="https://github.com/" target="blank">
+    <a href="https://github.com/qcam" target="blank">
       <i class="fa fa-github"></i>
     </a>
-    <a href="https://twitter.com/huynhquancam" target="blank">
+    <a href="https://twitter.com/hqcam" target="blank">
       <i class="fa fa-twitter"></i>
     </a>
   </div>
