--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
       <a href="/about">About</a>
     </li>
     <li>
-      <a href="/projects">Projects</a>
+      <a href="https://github.com/qcam?tab=repositories">Projects</a>
     </li>
     <li>
       <a href="/essays">Posts</a>
