--- a/about/index.html
+++ b/about/index.html
@@ -111,7 +111,7 @@ my <a href="/essays/">blog</a>, or drop me an email at huynhquancam at Gmail dot
       <a href="/about">About</a>
     </li>
     <li>
-      <a href="/projects">Projects</a>
+      <a href="https://github.com/qcam?tab=repositories">Projects</a>
     </li>
     <li>
       <a href="/essays">Posts</a>
