--- a/essays/index.html
+++ b/essays/index.html
@@ -217,7 +217,7 @@ which is a CLI to manage all your daily notes like a boss, with vim integration.
       <a href="/about">About</a>
     </li>
     <li>
-      <a href="/projects">Projects</a>
+      <a href="https://github.com/qcam?tab=repositories">Projects</a>
     </li>
     <li>
       <a href="/essays">Posts</a>
