--- a/essays/index.html
+++ b/essays/index.html
@@ -55,8 +55,9 @@
       <div class="post__intro">
         <p>As a terminal lover, I always want to get <strong>everything</strong> done on my terminal,
 instead of switching to browser or an external app. I personally built up a
-couple of CLI app for my personal use (<a href="https://github.com/qcam/worque">worque</a>
-and <a href="https://github.com/qcam/3llo">3llo</a>.</p>
+couple of CLI apps for my personal use (checkout
+<a href="https://github.com/qcam/worque">worque</a> and
+<a href="https://github.com/qcam/3llo">3llo</a>).</p>
 
 
       </div>
