--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@ title: Cẩm Huỳnh
     <a href="https://twitter.com/{{ site.extras.handler.twitter }}" target="blank">
       <i class="fa fa-twitter"></i>
     </a>
+    <a href="https://reddit.com/u/{{ site.extras.handler.reddit }}" target="blank">
+      <i class="fa fa-reddit"></i>
+    </a>
   </div>
 </div>
